[gd_scene load_steps=20 format=3 uid="uid://bo0kjwd80f3oh"]

[ext_resource type="Script" path="res://Ground.gd" id="1_6rayu"]
[ext_resource type="Script" path="res://GUIPanel3D.gd" id="2_3ryx5"]
[ext_resource type="Texture2D" uid="uid://bjjvc1ugyyq4d" path="res://Images/dialog_background.png" id="3_s7amr"]
[ext_resource type="Texture2D" uid="uid://cbqqj8uxcyb5j" path="res://Images/frame.png" id="3_vr26g"]
[ext_resource type="Texture2D" uid="uid://bbvr7n5vtucny" path="res://Images/001.png" id="4_3ai2r"]
[ext_resource type="FontFile" uid="uid://inwv247rg0b2" path="res://AstroSpace-eZ2Bg.ttf" id="4_e5lvf"]
[ext_resource type="Theme" uid="uid://drtj5r45t6dgi" path="res://font_theme.tres" id="7_8h3nt"]
[ext_resource type="Shader" path="res://vignette.gdshader" id="7_pwx57"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yac54"]
size = Vector3(2, 0.15, 2)

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_3tuoj"]
diffuse_mode = 3
albedo_color = Color(1, 0.827451, 1, 1)
clearcoat_enabled = true
clearcoat = 0.36
clearcoat_roughness = 0.95
ao_enabled = true
ao_light_affect = 0.02
subsurf_scatter_strength = 0.09

[sub_resource type="BoxMesh" id="BoxMesh_gogwu"]
lightmap_size_hint = Vector2i(21, 13)
material = SubResource("ORMMaterial3D_3tuoj")
uv2_padding = 0.64
size = Vector3(2, 0.15, 2)

[sub_resource type="Environment" id="Environment_bwhkg"]
ambient_light_color = Color(0.54902, 0.65098, 0.796078, 1)
tonemap_mode = 2
tonemap_exposure = 0.9
tonemap_white = 1.2
ssao_radius = 0.38
ssao_detail = 0.61
sdfgi_enabled = true
glow_bloom = 0.2

[sub_resource type="Theme" id="Theme_xymk5"]
default_font = ExtResource("4_e5lvf")
default_font_size = 14

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yngdh"]

[sub_resource type="QuadMesh" id="QuadMesh_3y8ds"]
material = SubResource("StandardMaterial3D_yngdh")
size = Vector2(1.5, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_6p7vy"]
viewport_path = NodePath("GUIPanel3D/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q26m1"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_6p7vy")

[sub_resource type="BoxShape3D" id="BoxShape3D_mwpb5"]
size = Vector3(1.49513, 1, 0.01)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v03rd"]
shader = ExtResource("7_pwx57")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/multiplier = 0.4
shader_parameter/softness = 0.9

[node name="Node3D" type="Node3D"]

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0778871, 0)
script = ExtResource("1_6rayu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_yac54")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_gogwu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.00198965, 0.999998, 0, -0.999998, -0.00198965, 0, 1.06228, -0.00479263)
light_indirect_energy = 0.258
shadow_enabled = true
shadow_bias = 1.0
shadow_blur = 0.01
directional_shadow_mode = 0
directional_shadow_fade_start = 0.421
directional_shadow_max_distance = 1.0
directional_shadow_pancake_size = 5.0
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bwhkg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.278186, 0.960527, 0, -0.960527, 0.278186, 0.0927638, 0.576335, 0.238166)
current = true
fov = 32.5
near = 0.02
far = 75.99

[node name="GUIPanel3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.046948, -0.0222615, 0.0268648)
script = ExtResource("2_3ryx5")

[node name="SubViewport" type="SubViewport" parent="GUIPanel3D"]
transparent_bg = true
handle_input_locally = false
gui_embed_subwindows = true
size = Vector2i(560, 360)
render_target_update_mode = 4

[node name="Control" type="Control" parent="GUIPanel3D/SubViewport"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 3
anchors_preset = 0
offset_right = 560.0
offset_bottom = 360.0

[node name="Panel" type="Panel" parent="GUIPanel3D/SubViewport/Control"]
layout_mode = 0
offset_right = 560.0
offset_bottom = 360.0

[node name="TextureRect" type="TextureRect" parent="GUIPanel3D/SubViewport/Control/Panel"]
self_modulate = Color(0.517647, 0.517647, 0.517647, 0.807843)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_right = 560.0
offset_bottom = 560.0
texture = ExtResource("3_s7amr")
expand_mode = 4
stretch_mode = 4

[node name="card_logo" type="TextureRect" parent="GUIPanel3D/SubViewport/Control/Panel"]
self_modulate = Color(1, 1, 1, 0.447059)
layout_mode = 0
offset_right = 560.0
offset_bottom = 560.0
texture = ExtResource("4_3ai2r")

[node name="Title" type="Label" parent="GUIPanel3D/SubViewport/Control/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 79.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 24
text = "Titel text
"

[node name="RichTextLabel" type="RichTextLabel" parent="GUIPanel3D/SubViewport/Control/Panel"]
clip_contents = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 10.0
offset_top = 40.0
offset_right = 570.0
offset_bottom = 340.0
size_flags_horizontal = 4
theme = SubResource("Theme_xymk5")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "There is no description for this card.

"
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="GUIPanel3D/SubViewport/Control/Panel"]
layout_mode = 2
offset_left = 10.0
offset_top = 150.0
offset_right = 645.0
offset_bottom = 350.0

[node name="frame1" type="TextureRect" parent="GUIPanel3D/SubViewport/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_vr26g")
expand_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="GUIPanel3D/SubViewport/Control/Panel/HBoxContainer/frame1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 170.0
offset_bottom = 30.0
grow_vertical = 0
theme = ExtResource("7_8h3nt")
bbcode_enabled = true
text = "frame1"
fit_content = true
scroll_active = false

[node name="frame2" type="TextureRect" parent="GUIPanel3D/SubViewport/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_vr26g")
expand_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="GUIPanel3D/SubViewport/Control/Panel/HBoxContainer/frame2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 170.0
offset_bottom = 10.0
grow_vertical = 0
theme = ExtResource("7_8h3nt")
text = "frame2"
fit_content = true
scroll_active = false

[node name="frame3" type="TextureRect" parent="GUIPanel3D/SubViewport/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_vr26g")
expand_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="GUIPanel3D/SubViewport/Control/Panel/HBoxContainer/frame3"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 170.0
offset_bottom = 10.0
grow_vertical = 0
theme = ExtResource("7_8h3nt")
text = "frame3"
fit_content = true
scroll_active = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="GUIPanel3D"]
transform = Transform3D(0.15, -5.2318e-17, 5.2318e-17, -5.2318e-17, -6.55671e-09, 0.15, -5.2318e-17, -0.15, -6.55671e-09, 0.19624, 0.0364349, 0.116914)
rotation_order = 1
gi_lightmap_scale = 1
mesh = SubResource("QuadMesh_3y8ds")
surface_material_override/0 = SubResource("StandardMaterial3D_q26m1")

[node name="Area3D" type="Area3D" parent="GUIPanel3D/MeshInstance3D"]
input_capture_on_drag = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="GUIPanel3D/MeshInstance3D/Area3D"]
transform = Transform3D(1, 2.17439e-22, -2.87126e-22, -3.46489e-22, 1, -1.77874e-14, 2.85624e-22, 2.79479e-14, 1, -0.00142479, 0, 0)
shape = SubResource("BoxShape3D_mwpb5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_v03rd")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
